--- a/app/components/HeroSection/HeroSection.module.css
+++ b/app/components/HeroSection/HeroSection.module.css
@@ -30,8 +30,8 @@
 }
 
 .backgroundImage {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
   filter: grayscale(100%) contrast(1.1);
